2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Add link to index page.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: More fix.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Make relative link.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Fix for beta release.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix default netusage.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Clerk.pm: Typo.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Fix html for relative link.

2012-02-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Do not print the data to the debug file.

2012-02-08  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not use temporary disk space while
	  doing backup or recovery.

2012-02-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: filenum must be sorted numerically.

2012-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: pg_version 802000 => 80200.

2012-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not print normal
	  pg_xlogfile_name_offset output to MESG stream.

2012-01-31 Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/preinst, packaging/rpm/amanda.spec.src: change /bin/sh
	  to /bin/bash.

2012-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Call pg_switch_xlog() only for backup.

2012-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Run pg_switch_xlog() and wait for the
	  archived WAl before doing an incremental backup.

2012-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix compilation.

2012-01-23  Jean-Louis Martineau <martineau@zmanda.com>